# kutacard

./: .gitmodules  CMakeLists.txt
docs/: shiftjis.md  working-with-ps1-cards.md
include/: directoryframe.h  filesystem.h  mainapp.h  mainframe.h  memorycard.h  memorycardlistview.h  myframe.h  ps1common.h  savegame.h  shiftjis.h  shiftjis_table.h
misc/: shiftjis-generator.py
src/: kutacli.cpp  mainapp.cpp  mainframe.cpp  memorycard.cpp  memorycardlistview.cpp  myframe.cpp  savegame.cpp
